--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
   
   section {
     /* This element will be a grid item, but also a flex container */
-    background-color: rgba(50, 130, 170, 0.3);
+    background-color: #A2AAB0;
     padding: 2rem;
     grid-row-start: 1;
     grid-row-end: 4;
@@ -99,8 +99,8 @@ section img:hover {
     height: 50px;
     border: none;
     outline: none;
-    color: #fff;
-    background: #111;
+    color: #142632;
+    background: #A2AAB0;
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -125,7 +125,7 @@ section img:hover {
   }
   
   .glow-on-hover:active {
-    color: #000
+    color: #142632;
   }
   
   .glow-on-hover:active:after {
@@ -142,7 +142,7 @@ section img:hover {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #111;
+    background: #a2a2a2;
     left: 0;
     top: 0;
     border-radius: 10px;
@@ -156,4 +156,10 @@ section img:hover {
 
   footer {
     text-align: center;
+  }
+
+  button {
+    font-family: 'Astloch', cursive;
+    font-size: x-large;
+    color:#142632;
   }
